--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/_GridViewPartial_DepositoBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/_GridViewPartial_DepositoBanco.cshtml
@@ -98,7 +98,7 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("BAN_002", "BancoReportes", new { Area = "Reportes", IdTipocbte = DataBinder.Eval(c.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(c.DataItem, "IdCbteCble") }, Request.Url.Scheme) + "');\"></span>");
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("BAN_002", "BancoReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdTipocbte = DataBinder.Eval(c.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(c.DataItem, "IdCbteCble") }, Request.Url.Scheme) + "');\"></span>");
             });
             column.Width = Unit.Percentage(5);
         });
