--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
@@ -1,72 +1,72 @@
 @using System.Web.UI.WebControls;
 @{
-                var grid = Html.DevExpress().GridView(settings =>
+    var grid = Html.DevExpress().GridView(settings =>
+    {
+        settings.Name = "GridView_deudas";
+        settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deudas" };
+
+
+        settings.KeyFieldName = "IdCbteCble_Ogiro";
+
+        settings.Width = Unit.Percentage(100);
+        //CConfiguracion responsive
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
+        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+        //Configuración scrolling y pager
+        settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
+        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
+        settings.Settings.VerticalScrollableHeight = 400;
+        settings.SettingsPager.Visible = true;
+        settings.SettingsPager.PageSize = 10;
+        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
+        settings.SettingsPager.AlwaysShowPager = true;
+        //Configuración filtro por columna
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowHeaderFilterButton = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        //Configuracion exportacion
+        settings.SettingsExport.EnableClientSideExportAPI = true;
+        settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
+        settings.Toolbars.Add(t =>
+        {
+            t.EnableAdaptivity = true;
+            t.Items.Add(GridViewToolbarCommand.ExportToPdf);
+            t.Items.Add(GridViewToolbarCommand.ExportToXls);
+            t.Items.Add(GridViewToolbarCommand.ExportToXlsx);
+            t.Items.Add(GridViewToolbarCommand.ExportToDocx);
+            t.Items.Add(GridViewToolbarCommand.ExportToRtf);
+            t.Items.Add(GridViewToolbarCommand.ExportToCsv);
+        });
+        settings.SettingsExport.RenderBrick = (sender, e) =>
+        {
+            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
+                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
+        };
+        //Evento para pintar de rojo las filas anuladas
+        settings.HtmlRowPrepared = (s, e) =>
+        {
+            if (Convert.ToString(e.GetValue("Estado")) == "I")
+            {
+                e.Row.ForeColor = System.Drawing.Color.Red;
+            }
+        };
+        settings.Columns.Add(c =>
+        {
+            c.Caption = "#";
+            c.SetDataItemTemplateContent(tc =>
+            {
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
-                    settings.Name = "GridView_deudas";
-                    settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deudas" };
+                    ViewContext.Writer.Write(
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Ogiro = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Ogiro"), IdCbteCble_Ogiro = DataBinder.Eval(tc.DataItem, "IdCbteCble_Ogiro") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Ogiro = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Ogiro"), IdCbteCble_Ogiro = DataBinder.Eval(tc.DataItem, "IdCbteCble_Ogiro") },
+                        new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
 
-
-                    settings.KeyFieldName = "IdCbteCble_Ogiro";
-
-                    settings.Width = Unit.Percentage(100);
-                    //CConfiguracion responsive
-                    settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
-                    settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-                    settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-                    settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-                    settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-                    //Configuración scrolling y pager
-                    settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
-                    settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-                    settings.Settings.VerticalScrollableHeight = 400;
-                    settings.SettingsPager.Visible = true;
-                    settings.SettingsPager.PageSize = 10;
-                    settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-                    settings.SettingsPager.AlwaysShowPager = true;
-                    //Configuración filtro por columna
-                    settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-                    settings.Settings.ShowFilterRow = true;
-                    settings.Settings.ShowHeaderFilterButton = true;
-                    settings.SettingsBehavior.AllowSelectByRowClick = true;
-                    //Configuracion exportacion
-                    settings.SettingsExport.EnableClientSideExportAPI = true;
-                    settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-                    settings.Toolbars.Add(t =>
-                    {
-                        t.EnableAdaptivity = true;
-                        t.Items.Add(GridViewToolbarCommand.ExportToPdf);
-                        t.Items.Add(GridViewToolbarCommand.ExportToXls);
-                        t.Items.Add(GridViewToolbarCommand.ExportToXlsx);
-                        t.Items.Add(GridViewToolbarCommand.ExportToDocx);
-                        t.Items.Add(GridViewToolbarCommand.ExportToRtf);
-                        t.Items.Add(GridViewToolbarCommand.ExportToCsv);
-                    });
-                    settings.SettingsExport.RenderBrick = (sender, e) =>
-                    {
-                        if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                            e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
-                    };
-                    //Evento para pintar de rojo las filas anuladas
-                    settings.HtmlRowPrepared = (s, e) =>
-                    {
-                        if (Convert.ToString(e.GetValue("Estado")) == "I")
-                        {
-                            e.Row.ForeColor = System.Drawing.Color.Red;
-                        }
-                    };
-                    settings.Columns.Add(c =>
-                    {
-                    c.Caption = "#";
-                    c.SetDataItemTemplateContent(tc =>
-                    {
-                    if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                    {
-                        ViewContext.Writer.Write(
-                    Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Ogiro = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Ogiro"), IdCbteCble_Ogiro = DataBinder.Eval(tc.DataItem, "IdCbteCble_Ogiro") }) + "&nbsp;" +
-                            Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Ogiro = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Ogiro"), IdCbteCble_Ogiro = DataBinder.Eval(tc.DataItem, "IdCbteCble_Ogiro") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-            
-                                );
+                            );
                 }
             });
             c.SetHeaderTemplateContent(tc =>
@@ -90,15 +90,15 @@
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
-        column.PropertiesEdit.DisplayFormatString = "d";
-        sp.Width = Unit.Percentage(100);
-    });
+                column.PropertiesEdit.DisplayFormatString = "d";
+                sp.Width = Unit.Percentage(100);
+            });
         });
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXP_001", "CuentasPorPagarReportes", new { Area = "Reportes", IdTipoCbte_Ogiro = DataBinder.Eval(c.DataItem, "IdTipoCbte_Ogiro").ToString(), IdCbteCble_Ogiro = DataBinder.Eval(c.DataItem, "IdCbteCble_Ogiro").ToString() }, Request.Url.Scheme) + "');\"></span>");
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXP_001", "CuentasPorPagarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdTipoCbte_Ogiro = DataBinder.Eval(c.DataItem, "IdTipoCbte_Ogiro").ToString(), IdCbteCble_Ogiro = DataBinder.Eval(c.DataItem, "IdCbteCble_Ogiro").ToString() }, Request.Url.Scheme) + "');\"></span>");
             });
             column.Width = Unit.Percentage(5);
         });
