--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_GridViewPartial_producto_lst.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_GridViewPartial_producto_lst.cshtml
@@ -28,7 +28,7 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdProducto"] = 0;
+            e.NewValues["IdProducto"] = " ";
         };
         settings.Columns.Add(column =>
         {
