--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/IMP_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/IMP_003.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.Helps.cl_filtros_Info
+﻿@model Core.Erp.Info.Helps.cl_filtros_importacion_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "IMP_003";
