--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model Core.Erp.Info.Helps.cl_filtros_Info
+@model Core.Erp.Info.Helps.cl_filtros_inventario_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "INV_005";
@@ -10,6 +10,7 @@
 }
 @using (Html.BeginForm("INV_005", "InventarioReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa)
 <div class="box ">
     <div class="box-header with-border">
         <div class="row">
@@ -46,7 +47,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="IdProducto">Producto </label>
-                        @Html.Partial("_CmbProducto_Inventario", Model)
+                        @Html.Partial("_CmbProductoPadre_Inventario", Model)
                         @Html.ValidationMessageFor(q => q.IdProducto, "", new { @class = "text-danger" })
                     </div>
                 </div>
