--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_008.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_008.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.Helps.cl_filtros_Info
+﻿@model Core.Erp.Info.Helps.cl_filtros_inventario_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "INV_008";
@@ -55,7 +55,7 @@
                 <div class="col-md-12">
                     <div class="col-md-12">
                         <div class="form-group">
-                            @Html.Action("GridViewPartial_producto_lst", Model)
+                            @Html.Action("GridViewPartial_producto_lst")
                             @Html.ValidationMessageFor(q => q.IdProducto, "", new { @class = "text-danger" })
                         </div>
                     </div>
