--- a/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/Index.cshtml
@@ -1,16 +1,14 @@
-﻿<!DOCTYPE html>
-<html>
-<body>
+﻿
+@{
+    ViewBag.Title = "Videos";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-    <video width="400" controls>
-        <source src="~/Content/mov_bbb.mp4" type="video/mp4">
-        <source src="mov_bbb.ogg" type="video/ogg">
-        Your browser does not support HTML5 video.
-    </video>
-    <p>
-        Video courtesy of
-        <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
-    </p>
-
-</body>
-</html>
+@using (Html.BeginForm())
+{
+    @Html.Action("GridViewPartial_visor_video")
+}
