--- a/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/_GridViewPartial_visor_video.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/_GridViewPartial_visor_video.cshtml
@@ -77,39 +77,10 @@
             c.Width = Unit.Pixel(150);
         });
         
-        settings.Columns.Add("CodPais", "Codigo").Width = Unit.Percentage(20);
-        settings.Columns.Add("Nombre", "Nombre").Width = Unit.Percentage(35);
-        settings.Columns.Add("Nacionalidad", "Nacionalidad").Width = Unit.Percentage(35);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(10);
-
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "Región";
-            column.Width = Unit.Pixel(100);
-            column.SetDataItemTemplateContent(container =>
-            {
-                Html.DevExpress().HyperLink(hyperlink =>
-                {
-                    var keyValue = DataBinder.Eval(container.DataItem, "IdPais");
-                    hyperlink.Properties.Text = "Región";
-                    hyperlink.NavigateUrl = Url.Action("Index", "Region", new { IdPais = keyValue });
-                }).Render();
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "Provincia";
-            column.Width = Unit.Pixel(100);
-            column.SetDataItemTemplateContent(container =>
-            {
-                Html.DevExpress().HyperLink(hyperlink =>
-                {
-                    var keyValue = DataBinder.Eval(container.DataItem, "IdPais");
-                    hyperlink.Properties.Text = "Provincias";
-                    hyperlink.NavigateUrl = Url.Action("Index", "Provincia", new { IdPais = keyValue });
-                }).Render();
-            });
-        });
+        settings.Columns.Add("Cod_video", "Codigo").Width = Unit.Percentage(20);
+        settings.Columns.Add("Nombre_video", "Nombre").Width = Unit.Percentage(35);
+        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        
 
     });
 }
