--- a/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/Nuevo.cshtml
@@ -6,8 +6,16 @@
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
 }
-@using (Html.BeginForm("Nuevo", "Pais", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "VisorDeVideo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     <div class="row">
         <div class="col-md-12">
