--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_GridViewPartial_producto_lst.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_GridViewPartial_producto_lst.cshtml
@@ -34,6 +34,7 @@
         {
             column.FieldName = "pr_descripcion_combo";
             column.Caption = "Producto";
+            column.Visible = true;
             column.Width = Unit.Percentage(90);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
