--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
@@ -34,11 +34,11 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdProducto"] = 0;
+            e.NewValues["IdProducto"] = "";
             e.NewValues["IdCod_Impuesto"] = "IVA0";
-            e.NewValues["pd_cantidad"] = 0;
-            e.NewValues["pd_precio"] = 0;
-            e.NewValues["pd_por_descuento_uni"] = 0;
+            e.NewValues["pd_cantidad"] = "";
+            e.NewValues["pd_precio"] = "";
+            e.NewValues["pd_por_descuento_uni"] = "";
         };
         settings.Columns.Add(column =>
         {
