--- a/ERP/Core.Erp.Web/Areas/General/Views/Bodega/_GridViewPartial_bodega.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Bodega/_GridViewPartial_bodega.cshtml
@@ -58,7 +58,7 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega") }) + "&nbsp;" +
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega") }) + "&nbsp;" +
                         Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
