--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index.cshtml
@@ -9,8 +9,8 @@
 }
 
 @using (Html.BeginForm())
-{ 
-    <div class="box">
+{
+    <div class="box collapsed-box">
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
