--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Nuevo.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-offset-10 col-med-2">
                 <div class="form-group">
-                    <label for="">Fecha O.C</label>
+                    <label for="">Fecha O.C*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -145,7 +145,7 @@
                     <div class="col-md-12">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="IdPais_embarque">País de embarque</label>
+                                <label for="IdPais_embarque">País de embarque*</label>
                                 @Html.DevExpress().ComboBoxFor(q => q.IdPais_embarque, settings =>
                                {
                                    settings.Name = "IdPais_embarque";
