--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_006.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_006.cshtml
@@ -92,8 +92,9 @@
             @Html.DevExpress().WebDocumentViewer(settings =>
    {
        settings.MobileMode = false;
+       settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
        settings.Name = "webDocumentViewer";
-   }).Bind(ViewBag.Report).GetHtml();
+   }).Bind(ViewBag.Report).GetHtml()
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
