--- a/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/_GridViewPartial_visor_video.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/_GridViewPartial_visor_video.cshtml
@@ -3,7 +3,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_visor_video";
-        settings.CallbackRouteValues = new { Controller = "Pais", Action = "GridViewPartial_visor_video" };
+        settings.CallbackRouteValues = new { Controller = "VisorDeVideo", Action = "GridViewPartial_visor_video" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "Cod_video";
 
