--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
@@ -114,6 +114,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <a class="btn btn-primary" href="@Url.Action("Consulta","ReportesPorUsuario",new { Area = "General" },null)">Reportes</a>
+                                        <a class="btn btn-default glyphicon glyphicon-expand" href="@Url.Action("Index","VisorDeVideo",new { Area = "General"},null)"></a>
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
