--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbCuenta_contable.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbCuenta_contable.cshtml
@@ -9,6 +9,7 @@
         settings.CallbackRouteValues = new { Controller = "OrdenCompraExterior", Action = "CmbCuenta_cta_contable", Area = "Importacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
+        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.TextField = "pc_Cuenta";
         settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdCtaCble";
