--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProducto_Importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProducto_Importacion.cshtml
@@ -9,6 +9,7 @@
         settings.CallbackRouteValues = new { Controller = "Ordencompraexterior", Action = "CmbProducto_importacion", Area = "Importacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
+        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.TextField = "pr_descripcion";
         settings.Properties.TextFormatString = "[{1}] {2}";
         settings.Properties.ValueField = "IdProducto";
