--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
@@ -9,6 +9,7 @@
         settings.CallbackRouteValues = new { Controller = "OrdenCompraExterior", Action = "CmbProveedor_exterior", Area = "Importacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
+        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.TextField = "info_persona.pe_nombreCompleto";
         settings.Properties.TextFormatString = "[{1}] {2}";
         settings.Properties.ValueField = "IdProveedor";
