--- a/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
@@ -96,8 +96,9 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <a class="btn btn-primary" href="@Url.Action("Consulta","ReportesPorUsuario",new { Area = "General" },null)">Reportes</a>
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <a class="btn btn-default glyphicon glyphicon-expand" href="@Url.Action("Index","VisorDeVideo",new { Area = "General"},null)"></a>
                                     </div>
+                                   
                                     <div class="modal-body">
                                         @Html.DevExpress().TreeView(settings => {
                                        settings.Name = "treeViewMenu";
