--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_retenciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_retenciones.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_retenciones";
-        settings.CallbackRouteValues = new { Controller = "Retencion", Action = "GridViewPartial_retenciones", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
+        settings.CallbackRouteValues = new { Controller = "Retencion", Action = "GridViewPartial_retenciones", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin };
 
 
         settings.KeyFieldName = "IdRetencion";
